Fixing color contrast

--- a/css/style.css
+++ b/css/style.css
@@ -46,7 +46,7 @@ html {
 }
 
 .section-hero {
-    background-color: #e0898f;
+    background-color: #f3d0d2;
     padding: 5.3rem 0;
 }
 
@@ -81,7 +81,7 @@ html {
 
 .btn-outline:hover,
 .btn-outline:active {
-    background-color: #e0898f;
+    background-color: #f3d0d2;
     color: #555;
 
     box-shadow: inset 0 0 0 3px #fff;
@@ -111,7 +111,7 @@ html {
     width: 4.8rem;
     border-radius: 50%;
     margin-left: -1.6rem;
-    border: 3px solid #e0898f;
+    border: 3px solid #f3d0d2;
 }
 
 .delivered-text {
